<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDrawer"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/img_backgr"
    >

<!--        App body goes here-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/img_backgr"
        >

        <EditText
            android:id="@+id/edtDatePick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="64dp"
            android:background="@drawable/edt_date"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:textColor="#6D000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="84dp"
            android:fontFamily="sans-serif-light"
            android:text="The last time you have a lover"
            android:textColor="#D8D8D8"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBeenFor"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="106dp"
            android:text="@string/been_alone"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/edtDatePick"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/edtDatePick"
            app:layout_constraintTop_toBottomOf="@+id/edtDatePick" />

        <TextView
            android:id="@+id/txtNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edtDatePick"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/edtDatePick"
            app:layout_constraintTop_toBottomOf="@+id/txtBeenFor" />

        <TextView
            android:textColor="@color/white"
            android:textSize="22sp"
            android:id="@+id/txtDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/txtNumber"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/txtNumber"
            app:layout_constraintTop_toBottomOf="@+id/txtNumber" />

        <TextView
            android:id="@+id/txtReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/viewMode"
            android:textColor="#D8D8D8"
            android:textSize="9sp"
            android:textStyle="bold"
            android:alpha="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDay" />

        <CheckBox
            android:id="@+id/btnLock"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginStart="260dp"
            android:alpha="0"
            android:background="@android:color/transparent"
            android:button="@drawable/btn_lock"
            android:buttonTint="#2A638F"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:textColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/edtDatePick"
            app:layout_constraintStart_toStartOf="@+id/edtDatePick"
            app:layout_constraintTop_toTopOf="@+id/edtDatePick" />

        <TextView
            android:id="@+id/txtLocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:clickable="false"
            android:fontFamily="@font/font_lightmontserrat"
            android:text="locked!"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/txtBeenFor"
            app:layout_constraintTop_toBottomOf="@+id/edtDatePick" />

        <TextView
            android:id="@+id/txtUnlocked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:alpha="0"
            android:clickable="false"
            android:fontFamily="@font/font_lightmontserrat"
            android:text="unlocked!"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/txtBeenFor"
            app:layout_constraintTop_toBottomOf="@+id/edtDatePick" />

        <TextView
            android:id="@+id/txtQuote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="46dp"
            android:alpha="0"
            android:fontFamily="@font/indie_flower"
            android:text=""
            android:textColor="#CBFFFFFF"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtBeenFor" />

        <TextView
            android:id="@+id/txtArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:fontFamily="@font/indie_flower"
            android:text=""
            android:textColor="#CDFFFFFF"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/txtQuote"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toStartOf="@+id/txtQuote"
            app:layout_constraintTop_toBottomOf="@+id/txtQuote" />

        <TextView
            android:clickable="false"
            android:id="@+id/txtQuoteEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="-7dp"
            android:alpha="0"
            android:fontFamily="@font/font_lightmontserrat"
            android:text="@string/quote_enable"
            android:textColor="#CCFFFFFF"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_quote"
            app:layout_constraintEnd_toStartOf="@+id/cb_quote"
            app:layout_constraintTop_toTopOf="@+id/cb_quote" />

        <TextView
            android:translationY="-7dp"
            android:clickable="false"
            android:id="@+id/txtQuoteDisabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:fontFamily="@font/font_lightmontserrat"
            android:text="@string/quote_unable"
            android:textColor="#CCFFFFFF"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_quote"
            app:layout_constraintEnd_toStartOf="@+id/cb_quote"
            app:layout_constraintTop_toTopOf="@+id/cb_quote" />
        <ImageView
            android:translationY="-6dp"
            android:id="@+id/imageView"
            android:layout_width="46dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_quote"
            app:layout_constraintEnd_toEndOf="@+id/cb_quote"
            app:layout_constraintTop_toTopOf="@+id/cb_quote"
            app:srcCompat="@drawable/img" />
        <CheckBox
            android:translationY="-6dp"
            android:enabled="false"
            android:alpha="0"
            android:id="@+id/cb_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/btn_quote"
            android:buttonTint="#CDFFFFFF"
            android:scaleX="0.6"
            android:scaleY="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="232dp"
            android:layout_marginStart="12dp"
            android:background="@android:color/transparent"
            android:translationY="-6dp"
            app:layout_constraintBottom_toBottomOf="@id/cb_quote"
            app:layout_constraintEnd_toStartOf="@id/cb_quote"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cb_quote"
            app:srcCompat="@drawable/btn_menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--        Navigation menu goes here-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/viewNavigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:menu="@menu/drawer_navigation"
        app:headerLayout="@layout/drawer_header"
        />

</androidx.drawerlayout.widget.DrawerLayout>
